package bookMyShow;

public enum BookingStatus {
    PENDING,
    CONFIRMED,
    CANCELLED
}
