package bookMyShow;

public enum SeatCategory {
    GOLD,
    DIAMOND
}
