package bookMyShow;

public enum SeatStatus {
    AVAILABLE,
    LOCKED,
    BOOKED
}
